[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tftpy"]

[project]
name = "tftpy"
version = "0.8.5"
authors = [
  { name="Michael Soulier", email="msoulier@digitaltorque.ca" },
]
description = "A TFTP protocol library for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/msoulier/tftpy"
Issues = "https://github.com/msoulier/tftpy/issues"
